--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"@prisma/client": "^3.4.1",
 		"next": "12.0.3",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"swr": "^1.0.1"
 	},
 	"devDependencies": {
 		"eslint": "7.32.0",
