--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^3.4.1",
+		"apollo-server-micro": "^3.5.0",
+		"graphql": "^15.7.2",
+		"micro-cors": "^0.1.1",
 		"next": "12.0.3",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
