--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 	"dependencies": {
 		"@prisma/client": "^3.4.1",
 		"apollo-server-micro": "^3.5.0",
+		"bcrypt": "^5.0.1",
 		"graphql": "^15.7.2",
+		"jsonwebtoken": "^8.5.1",
 		"micro-cors": "^0.1.1",
 		"next": "12.0.3",
 		"react": "17.0.2",
